functionally works in one page

--- a/src/Index.html
+++ b/src/Index.html
@@ -8,7 +8,7 @@
     <title>Kindergarten in Guri-si</title>
   </head>
   <body>
-    <h1>구리시의 유치원과 어린이집</h1>
+    <h2>구리시에 있는 유치원과 어린이집</h2>
     <div id="root">Hier</div>
     <script src="./App.js"></script>
   </body>
