--- a/src/Index.html
+++ b/src/Index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Kindergarten in Guri-si</title>
+    <title>구리시 소재 유치원·어린이집</title>
   </head>
   <body>
-    <h2>구리시에 있는 유치원과 어린이집</h2>
-    <div id="root">Hier</div>
+    <h4 class="title">경기도 구리시 소재</h4>
+    <h2 class="title">유치원·어린이집 👶🧒👦</h2>
+    <div id="root">Loading</div>
     <script src="./App.js"></script>
   </body>
 </html>
