update: apply responsive design, change classname and add map options

--- a/src/Index.html
+++ b/src/Index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
 
-    <title>구리시 소재 유치원·어린이집</title>
+    <title>킨더구리 | Kinderguri</title>
   </head>
   <body>
-    <div id="root">Loading</div>
+    <div id="root">이 웹 페이지는 Chrome 브라우저에 최적화 되었습니다.</div>
     <script src="./App.js"></script>
   </body>
 </html>
