Add a link to the portfolio and README file

--- a/src/Index.html
+++ b/src/Index.html
@@ -2,9 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#00944A" />
+    <meta name="author" content="Haneul Cha" />
+    <meta
+      name="description"
+      content="경기도 구리시 소재 유치원과 어린이집을 검색하세요"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
+    <meta property="og:image" content="/kinderguri-favicon.png" />
+    <meta
+      property="og:description"
+      content="You can search kindergartens and daycare centers located in Guri-si on Kakao Map"
+    />
+    <meta property="og:title" content="킨더구리 | Kinderguri" />
+    <meta name="twitter:title" content="킨더구리 | Kinderguri" />
+
+    <link
+      rel="shortcut icon"
+      href="/kinderguri-favicon.png"
+      type="image/x-icon"
+    />
 
     <title>킨더구리 | Kinderguri</title>
   </head>
