Add: pages in FE

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -28,6 +28,6 @@
   </head>
   <body>
     <div id="root">이 웹 페이지는 Chrome 브라우저에 최적화 되었습니다.</div>
-    <script src="./App.js"></script>
+    <script src="./index.tsx"></script>
   </body>
 </html>
