Add: Containers for layouts and CSS (kill me)

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -25,11 +25,11 @@
     />
 
     <title>킨더구리 | Kinderguri</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="/style.css" rel="stylesheet" type="text/css" /> -->
   </head>
   <body>
     <div id="root">이 웹 페이지는 Chrome 브라우저에 최적화</div>
-    <div id="map" class="map" style="width: 100vw; height: 100vh"></div>
+    <!-- <div id="map" class="map" style="width: 100vw; height: 100vh"></div> -->
 
     <script src="./index.tsx"></script>
   </body>
