Add: Modal for detail

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,6 +15,7 @@
       property="og:description"
       content="You can search kindergartens and daycare centers located in Guri-si on Kakao Map"
     />
+    <meta name="format-detection" content="telephone=no" />
     <meta property="og:title" content="킨더구리 | Kinderguri" />
     <meta name="twitter:title" content="킨더구리 | Kinderguri" />
 
@@ -30,7 +31,7 @@
   <body>
     <div id="root">이 웹 페이지는 Chrome 브라우저에 최적화</div>
     <!-- <div id="map" class="map" style="width: 100vw; height: 100vh"></div> -->
-
+    <div id="modal-root"></div>
     <script src="./index.tsx"></script>
   </body>
 </html>
