Add: Header and Footer

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,7 +26,11 @@
     />
 
     <title>킨더구리 | Kinderguri</title>
-    <!-- <link href="/style.css" rel="stylesheet" type="text/css" /> -->
+    <link
+      href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
   <body>
     <div id="root">이 웹 페이지는 Chrome 브라우저에 최적화</div>
