--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#00944A" />
+    <meta name="theme-color" content="#F4D35E" />
     <meta name="author" content="Haneul Cha" />
     <meta
       name="description"
-      content="경기도 구리시 소재 유치원과 어린이집을 검색하세요"
+      content="경기도 구리시 소재 보육 관련 시설들을 검색하세요"
+    />
+    <meta
+      name="keywords"
+      content="경기도 구리, 구리시, 보육시설, 무장애 여행, 구리시 유치원, 구리시 어린이집, 구리시 소아 병원"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
     <meta property="og:image" content="/kinderguri-favicon.png" />
@@ -33,8 +37,7 @@
     />
   </head>
   <body>
-    <div id="root">이 웹 페이지는 Chrome 브라우저에 최적화</div>
-    <!-- <div id="map" class="map" style="width: 100vw; height: 100vh"></div> -->
+    <div id="root"></div>
     <div id="modal-root"></div>
     <script src="./index.tsx"></script>
   </body>
